[JENKINS-70809]fixup "delete build" button overflow the side-panel

--- a/war/src/main/less/modules/side-panel-tasks.less
+++ b/war/src/main/less/modules/side-panel-tasks.less
@@ -111,7 +111,10 @@
   }
 
   .task-link-text {
-    display: contents;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: inline-block;
   }
 
   &--active {
